--- a/style.css
+++ b/style.css
@@ -4,6 +4,12 @@ p {
     margin:         auto;
 }
 
+li {
+    font-family:    monospace;
+    font-size:      150%;
+    margin:         auto;
+}
+
 h4 {
     font-family:    monospace;
     font-size:      200%;
@@ -18,6 +24,7 @@ h4 {
     margin-left:    auto;
     margin-right:   auto;
     border:         2px solid black;
+    padding:        7px;
 }
 
 .menu {
