--- a/style.css
+++ b/style.css
@@ -18,9 +18,9 @@ h4 {
 }
 
 .main {
+    margin-top:     -27px;
     min-width:      900px;
     max-width:      900px;
-    margin-top:     30px;
     margin-left:    auto;
     margin-right:   auto;
     border:         2px solid black;
@@ -28,6 +28,7 @@ h4 {
 }
 
 .menu {
+    display:        inline-block;
     max-width:      fit-content;
     margin-left:    auto;
     margin-right:   auto;
