--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ h4 {
     margin-top:     30px;
 }
 
-.container {
+.flex-container {
     
     display: flex;
     flex-direction: column;
@@ -29,40 +29,23 @@ h4 {
     justify-content: flex-start;
 }
 
-.row:nth-child(1) {
-    justify-content: space-between;
-}
-
-.row:nth-child(2) {
-    justify-content: center;
-}
-
 .main {
     max-width:      700px;
     border:         2px solid black;
     padding:        7px;
     margin-left:    auto;
     margin-right:   auto;
-    position:       absolute;
+    position: absolute;
     left:           50%;
-    transform:      translateX(-50%);
-}
+    transform: translateX(-50%);
 
-.resume {
-    max-width:      700px;
-    border:         2px solid black;
-    padding:        7px;
-    margin-left:    auto;
-    margin-right:   auto;
-    position:       absolute;
-    left:           50%;
-    transform:      translateX(-50%);
 }
 
 .menu {
-    border:         2px solid black;
-    background-color: #60c8e0;
-    max-width:          130px;
+    border:             2px solid black;
+    background-color:   #60c8e0;
+    max-width:          fit-content;
+    max-height:         fit-content;
 }
 
 .menulink {
