--- a/style.css
+++ b/style.css
@@ -41,6 +41,15 @@ h4 {
 
 }
 
+.pp-main {
+    max-width:      700px;
+    border:         2px solid black;
+    padding:        7px;
+    margin-left:    auto;
+    margin-right:   auto;
+    left:           50%;
+}
+
 .menu {
     border:             2px solid black;
     background-color:   #60c8e0;
