--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ h4 {
 
 .pp-main {
     background-color: black;
-    border-radius: 5px;
+    border-radius:  5px;
     border:         2px solid black;
     padding:        7px;
     margin-left:    auto;
@@ -60,8 +60,8 @@ h4 {
 .menu {
     border:             2px solid black;
     background-color:   #60c8e0;
-    max-width:          fit-content;
-    max-height:         fit-content;
+    width:              fit-content;
+    height:             90px;
 }
 
 .menulink {
